--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -252,7 +252,7 @@ service hciattach /system/vendor/bin/init.qcom.bt.sh
     user bluetooth
     group bluetooth net_bt_admin
     disabled
-    seclabel u:r:bluetooth_loader:s0
+    #seclabel u:r:bluetooth_loader:s0
     oneshot
 
 on property:bluetooth.hciattach=true
@@ -312,7 +312,7 @@ service charger /charger
     class charger
     user root
     group root system radio log
-    seclabel u:r:charger:s0
+    #seclabel u:r:charger:s0
 
 service hvdcp /system/bin/hvdcp
     class core
