lettuce: Add IMS hax for Pie
[ghostrider-reborn]:
* Move IMS services to boot
* Make seperate script for this, as we dont have init.qcom.sh

Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

Co-authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Ad!thya R <gh0strider.2k18.reborn@gmail.com>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -61,6 +61,13 @@ on init
     # Enable IMS
     setprop service.qti.ims.enabled 1
 
+on boot
+# HAX for IMS
+service ims-hax /system/vendor/bin/init.qcom.ims-hax.sh
+    class late_start
+    user root
+    oneshot
+
 service ims_rtp_daemon /system/vendor/bin/ims_rtp_daemon
    class main
    user system
